--- a/cssexam.html
+++ b/cssexam.html
@@ -17,7 +17,7 @@
                 width: 100%;
                 height: 100vh;
                 display: flex;
-                background-color:aquamarine;
+                background-color:green;
             }
          nav{
             
